--- a/memoria/Bibliografia.bib
+++ b/memoria/Bibliografia.bib
@@ -87,6 +87,51 @@ howpublished = {\url{www.mixamo.com}}
    pages={21–37}
 }
 
+@misc{yolov1,
+	title={You Only Look Once: Unified, Real-Time Object Detection},
+	author={Joseph Redmon and Santosh Divvala and Ross Girshick and Ali Farhadi},
+	year={2015},
+	eprint={1506.02640},
+	archivePrefix={arXiv},
+	primaryClass={cs.CV}
+}
+
+@misc{yolov2,
+	title={YOLO9000: Better, Faster, Stronger},
+	author={Joseph Redmon and Ali Farhadi},
+	year={2016},
+	eprint={1612.08242},
+	archivePrefix={arXiv},
+	primaryClass={cs.CV}
+}
+
+@misc{yolov3,
+	title={{YOLOv3: An Incremental Improvement}},
+	author={Joseph Redmon and Ali Farhadi},
+	year={2018},
+	eprint={1804.02767},
+	archivePrefix={arXiv},
+	primaryClass={cs.CV}
+}
+
+@misc{resnets,
+	title={Deep Residual Learning for Image Recognition},
+	author={Kaiming He and Xiangyu Zhang and Shaoqing Ren and Jian Sun},
+	year={2015},
+	eprint={1512.03385},
+	archivePrefix={arXiv},
+	primaryClass={cs.CV}
+}
+
+@misc{mobilenet,
+	title={MobileNets: Efficient Convolutional Neural Networks for Mobile Vision Applications},
+	author={Andrew G. Howard and Menglong Zhu and Bo Chen and Dmitry Kalenichenko and Weijun Wang and Tobias Weyand and Marco Andreetto and Hartwig Adam},
+	year={2017},
+	eprint={1704.04861},
+	archivePrefix={arXiv},
+	primaryClass={cs.CV}
+}
+
 @misc{mobilenetv2,
       title={MobileNetV2: Inverted Residuals and Linear Bottlenecks}, 
       author={Mark Sandler and Andrew Howard and Menglong Zhu and Andrey Zhmoginov and Liang-Chieh Chen},
@@ -174,4 +219,13 @@ systems",
 	school = {Escuela Técnica Superior de Ingeniería de Telecomunicación, Universidad Rey Juan Carlos},
 	howpublished = {\url{https://github.com/RoboticsURJC-students/2015-TFM-Marcos-Pieras/blob/master/memoria/Memoria.pdf}},
 	note = "[Accedido 24 de Junio de 2019]"
+}
+
+@misc{vgg16,
+	title={Very Deep Convolutional Networks for Large-Scale Image Recognition},
+	author={Karen Simonyan and Andrew Zisserman},
+	year={2014},
+	eprint={1409.1556},
+	archivePrefix={arXiv},
+	primaryClass={cs.CV}
 }
