--- a/memoria/capitulos/0-Acronimos.tex
+++ b/memoria/capitulos/0-Acronimos.tex
@@ -2,7 +2,7 @@
 \newacronym{gui}{GUI}{Graphical User Interface}
 \newacronym{va}{VA}{Visión Artificial}
 \newacronym{fpn}{FPN}{Feature Pyramid Networks}
-\newacronym{ssd}{SSD}{Single Shot Detector}
+\newacronym{ssd}{SSD}{Single-Shot Multibox Detector}
 \newacronym{ia}{IA}{Inteligencia Artificial}
 \newacronym{fps}{FPS}{Frames Per Second}
 \newacronym{nms}{NMS}{Non-Maximum Suppression}
@@ -19,3 +19,5 @@
 \newacronym{glb}{GLB}{binary graphic library transmission format}
 \newacronym{rna}{RNA}{Redes Neuronales Artificiales}
 \newacronym{csail}{CSAIL}{MIT Computer Science \& Artificial Intelligence Lab}
+\newacronym{stem}{STEM}{Science, Technology, Engineering and Mathematics}
+\newacronym{yolo}{YOLO}{You Only Look Once}
