--- a/memoria/capitulos/2-Objetivos.tex
+++ b/memoria/capitulos/2-Objetivos.tex
@@ -1,17 +1,18 @@
 \section{Objetivos}\label{sec.objetivos}
 
-La meta principal de este \acrshort{tfm} ha sido la creación de la arquitectura necesaria que permite añadir el uso de procesamiento visual complejo de manera sencilla en la plataforma \textit{Kibotics}. Este objetivo se ha dividido a su vez en otros dos subobjetivos.
+La meta principal de este \acrshort{tfm} ha sido la creación de la arquitectura necesaria que permite añadir el uso de procesamiento visual complejo de manera sencilla en la plataforma \textit{Kibotics} en particular funciones de detección visual robusta de objetos en imágenes utilizando técnicas de aprendizaje profundo. Esto permitirá a los niños usuarios de \textit{Kibotics} programar comportamientos interesantes que manejen visión.. Este objetivo se ha dividido a su vez en otros dos subobjetivos que con una aplicación robótica concreta que use esa detección visual robusta, tanto con un robot real como con un robot simulado. Ambos validarán experimentalmente la infraestructura desarrollada.
 
 \begin{itemize}
-  \item \textbf{Comportamiento SiguePersona visual con drone real} que permite tener la infraestructura preparada para poder usarlo en los cursos que se desarrollan en la plataforma.
-  \item \textbf{Comportamiento SiguePersona visual con drone simulado} para tener la infraestructura preparada también en el entorno simulado.
+  \item \textbf{Comportamiento SiguePersona visual con drone real} que permite tener la infraestructura preparada para poder usarlo en los cursos que se desarrollan en la plataforma. El estímulo a identificar en las imágenes son las personas en el entorno del drone.
+  \item \textbf{Comportamiento SiguePersona visual con drone simulado} para tener la infraestructura preparada también en el entorno simulado. Esto conlleva la introducción de personas simuladas en los escenarios de \textit{Kibotics}.
 \end{itemize}
 
 \subsection*{Requisitos}
 Las soluciones a desarrollar para alcanzar los objetivos descritos deben cumplir además, los siguientes requisitos:
 
 \begin{itemize}
-  \item El desarrollo de la versión real debe hacerse en \textit{Python 3}.
+  \item El desarrollo de la versión con el robot real debe hacerse en \textit{Python 3}.
   \item Para el desarrollo del código en la versión simulada se debe usar \textit{HTML-5}, \textit{CSS-3} y \textit{Javascript}.
   \item Debe funcionar dentro de \textit{Kibotics v2.0} o superior.
+  \item La infraestructura de \textit{DeepLearning} tiene que funcionar ágilmente, en tiempo real, para que el comportamiento de seguimiento sea fluido y satisfactorio.
 \end{itemize}
